# mf-optimal-execution

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: dgm_mfg_1760150097.pt  direct_mfc_1760026562.pt  drl_mfg_1760128678.pt  fbsde_mfg_1760035281.pt  rl_mfg_1760120701.npy
mf_optimal_execution/: config.py  utils.py
mf_optimal_execution/models/: __init__.py  price_impact_model.py
mf_optimal_execution/networks/: __init__.py  dgm.py  direct_mfc.py  drl.py  fbsde.py  feed_forward.py
mf_optimal_execution/solutions/: __init__.py  optimal_execution_fbsde_mfc.py  optimal_execution_fbsde_mfg.py  optimal_execution_pde_mfg.py
notebooks/: 01_direct_mfc_report.ipynb  02_fbsde_report.ipynb  03_dgm_report.ipynb  04_rl_report.ipynb  05_drl_report.ipynb
scripts/: train_dgm.py  train_direct_mfc.py  train_drl.py  train_fbsde.py  train_rl.py
